# jarvis-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: client-build.yml
certs/: install-windows-local-signing-cert.ps1  sunvisai-local-code-signing.cer  sunvisai-local-root-ca.cer
scripts/: build_hostd.sh  build_linux_packages.sh  generate_tauri_icons.py  sign_windows_artifacts.ps1
src/: App.tsx  bridge.ts  clientUpdates.ts  desktopStatusAdapter.test.ts  desktopStatusAdapter.ts  digitalHumanMode.test.tsx  digitalHumanStatus.test.ts  digitalHumanTaskBridge.test.ts  main.tsx  sharedFrontendImport.test.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  commands.rs  main.rs
