[package]
name = "agi-desktop"
version = "0.1.9"
description = "Sunvisai Desktop shell for Batch E"
authors = ["Sunvisai"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0.0", features = ["tray-icon"] }
